# telecommunication

./: .gitignore  README.md
c++/tcp/: CMakeLists.txt  Makefile  server.cpp  tcp.cpp
c++/udp/: CMakeLists.txt  Makefile  udp.cpp  udp.hpp
python/mqtt/: README.md  publisher.py  subscriber.py
